What's new in thtk 2:

* thdat: A bug which made compression for TH07 fail has been
  fixed.